# 2A202600674-Bui_Van_Thai-Day22

./: .env.example  .gitignore  BONUS-CHALLENGE-EN.md  BONUS-CHALLENGE.md  HARDWARE-GUIDE.md  LICENSE  Makefile  README.md  VIBE-CODING.md  pyproject.toml  requirements-biggpu.txt  requirements.txt  rubric.md  setup-colab.sh  setup-laptop.sh
colab/: Lab22_DPO_BigGPU.ipynb  Lab22_DPO_T4.ipynb
notebooks/: 01_sft_mini.py  02_preference_data.py  03_dpo_train.py  04_compare_and_eval.py  05_merge_deploy_gguf.py  06_benchmark.py
scripts/: eval_judge.py  merge_and_gguf.py  prepare_preference_data.py  test_smoke.py  train_dpo.py  verify.py
solutions/: README.md
submission/: REFLECTION.md
submission/screenshots/: README.md
